# ForestFire-Simulation

./: LICENSE  README.md
forestFire/: ._CMakeLists.txt  ._main.cpp  ._model.txt  ._results.txt  ._run.sh  ._show.sh  ._start_trees.txt  ._treeInfos.txt  CMakeLists.txt  main.cpp  model.txt  results.txt  run.sh  runmic.sh  show.sh  start_trees.txt  test.sh  treeInfos.txt
forestFire/fire_lib/: ._tree.cpp  CMakeLists.txt  CMakeLists.txt.save  model.cpp  model.h  tree.cpp  tree.h  wind.cpp  wind.h
forestFire/fire_tests/: ._CMakeLists.txt  CMakeLists.txt
forestFire/fire_tests/tests/: ._model_tests.cpp  ._wind_tests.cpp  CMakeLists.txt  main.cpp  model_tests.cpp  wind_tests.cpp
forestFire/py/: draw_temperature.py
